030-software/fluxcd/apps/comics/graphql/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: graphql
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: graphql
  template:
    metadata:
      labels:
        app: graphql
        nfs-wd-zarya: "true"
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app: graphql
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: graphql
      containers:
        - name: graphql
          image: shokohsc/moleculer-ouistity
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          args:
            - services/graphql-gateway.service.js
          ports:
            - name: http
              containerPort: 7000
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              path: /.well-known/apollo/server-health
              port: http
          resources:
            requests:
              cpu: 100m
            limits:
              memory: 256Mi
          volumeMounts:
            - name: weekly
              mountPath: /usr/app/assets/data/archives/weekly
            - name: comics
              mountPath: /usr/app/assets/data/archives/comics
      volumes:
        - name: comics
          nfs:
            path: /comics
            server: genji.home.arpa
        - name: weekly
          nfs:
            path: /shared/weekly
            server: genji.home.arpa
