030-software/fluxcd/apps/comics/graphql/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: graphql
  annotations:
    dashboard.${domain}/name: apollo
    dashboard.${domain}/url: https://apollo.comics.${domain}
    dashboard.${domain}/icon: database-search
spec:
  hostnames:
  - apollo.comics.${domain}
  parentRefs:
  - name: comics
    kind: ListenerSet
    group: gateway.networking.k8s.io
    sectionName: apollo
  rules:
  - backendRefs:
    - name: graphql
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - cors:
        allowOrigins:
        - https://preview.comics.${domain}
        - https://dev.comics.${domain}
        - https://comics.${domain}
        allowMethods:
        - GET
        - POST
        - OPTIONS
        allowHeaders:
        - '*'
        # - DNT
        # - X-CustomHeader
        # - Keep-Alive
        # - User-Agent
        # - X-Requested-With
        # - If-Modified-Since
        # - Cache-Control
        # - Content-Type
        allowCredentials: false
        maxAge: 3600
      type: CORS
